syntax = "proto3";

// C# 네임스페이스 지정
option csharp_namespace = "GamePackets";

// 게임에서 사용할 패킷들을 정의합니다

// 패킷 ID 정의 (클라이언트/서버 공유)
enum PacketID {
    PACKET_ID_UNKNOWN = 0;           // proto3에서는 반드시 0부터 시작
    PACKET_ID_PLAYER_INFO_REQ = 1;
    PACKET_ID_PLAYER_INFO_RES = 2;
    PACKET_ID_CHAT_MESSAGE = 3;
    PACKET_ID_HELLO_PACKET = 4;
}

// 채팅 메시지 패킷
message ChatMessage {
    string sender = 1;
    string message = 2;
    int64 timestamp = 3;
}

// 간단한 Hello 패킷 (테스트용)
message HelloPacket {
    string message = 1;
}